recursion.cons.increasing.Increasing.scala.error
Erreur de compilation :
Increasing:5: error: overloaded method value <= with alternatives:
  (x: Double)Boolean <and>
  (x: Float)Boolean <and>
  (x: Long)Boolean <and>
  (x: Int)Boolean <and>
  (x: Char)Boolean <and>
  (x: Short)Boolean <and>
  (x: Byte)Boolean
 cannot be applied to (Boolean)
  return l.head<=increasing(l.tail)
               ^