recursion.cons.increasing.Increasing.scala.code
def increasing(l:List[Int]): Boolean = {
  if(l==Nil) {return true}
  else { 
  return l.head<=increasing(l.tail)
  }
}